[package]
name = "dopio_test_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "*"
sysinfo = "*"

serde = { version = "*", features = ["std", "derive"] }

tokio = {version = "*", features = ["full"]}